Update build version to .net 4

--- a/TestService/app.config
+++ b/TestService/app.config
@@ -1,25 +1,23 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
                 <behavior name="SampleServiceBehaviour">
-                    <serviceDebug httpHelpPageEnabled="true" includeExceptionDetailInFaults="true" />
-                    <serviceMetadata httpGetEnabled="true" />
+                    <serviceDebug httpHelpPageEnabled="true" includeExceptionDetailInFaults="true"/>
+                    <serviceMetadata httpGetEnabled="true"/>
                     <serviceCredentials>
-                        <userNameAuthentication userNamePasswordValidationMode="Custom"
-                            customUserNamePasswordValidatorType="WebServices20.Validators.MyUserNameValidator, MyUserNameValidator" />
+                        <userNameAuthentication userNamePasswordValidationMode="Custom" customUserNamePasswordValidatorType="WebServices20.Validators.MyUserNameValidator, MyUserNameValidator"/>
                     </serviceCredentials>
                 </behavior>
             </serviceBehaviors>
         </behaviors>
         <services>
             <service behaviorConfiguration="SampleServiceBehaviour" name="WebServices20.SampleService.EchoService">
-                <endpoint binding="clearUsernameBinding" bindingConfiguration="myClearUsernameBinding"
-                    contract="WebServices20.SampleService.IEchoService" />
+                <endpoint binding="clearUsernameBinding" bindingConfiguration="myClearUsernameBinding" contract="WebServices20.SampleService.IEchoService"/>
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8087/SampleService/" />
+                        <add baseAddress="http://localhost:8087/SampleService/"/>
                     </baseAddresses>
                 </host>
             </service>
@@ -27,7 +25,7 @@
 
         <extensions>
           <bindingExtensions>
-            <add name="clearUsernameBinding" type="WebServices20.BindingExtenions.ClearUsernameCollectionElement, ClearUsernameBinding" />
+            <add name="clearUsernameBinding" type="WebServices20.BindingExtenions.ClearUsernameCollectionElement, ClearUsernameBinding"/>
           </bindingExtensions>
         </extensions>
 
@@ -45,4 +43,4 @@
       </bindings>
 
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
