--- a/TestClient/app.config
+++ b/TestClient/app.config
@@ -1,16 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <system.serviceModel>
         
         <client>
-            <endpoint address="http://localhost:8087/SampleService/" binding="clearUsernameBinding"
-                bindingConfiguration="myClearUsernameBinding" contract="ServiceReference1.IEchoService"
-                name="ClearUsernameBinding_IEchoService" />
+            <endpoint address="http://localhost:8087/SampleService/" binding="clearUsernameBinding" bindingConfiguration="myClearUsernameBinding" contract="ServiceReference1.IEchoService" name="ClearUsernameBinding_IEchoService"/>
         </client>
 
       <extensions>
         <bindingExtensions>
-          <add name="clearUsernameBinding" type="WebServices20.BindingExtenions.ClearUsernameCollectionElement, ClearUsernameBinding" />
+          <add name="clearUsernameBinding" type="WebServices20.BindingExtenions.ClearUsernameCollectionElement, ClearUsernameBinding"/>
         </bindingExtensions>
       </extensions>
 
@@ -28,4 +26,4 @@
       </bindings>
       
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
